Update sidebar font size

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -110,6 +110,10 @@ const sidebar = SIDEBAR[langCode];
 			padding: 0;
 		}
 	}
+
+	.nav-group > h2 {
+		font-size: 24px;
+	}
 </style>
 
 <style is:global>
